2000-04-09  Mo DeJong  <mdejong@cygnus.com>

	* src/Makefile.in: Added install-unstripped, install-stripped,
	and install-docs rules. Made install-unstripped the default.
	Fixed the install rules to use exec_prefix instead of the prefix.
	Fixed problem installing the docs when build dir != src dir.

2000-04-09  Vadim Zaliva  <lord@crocodile.org>

	* ChangeLog moved from doc/ to project root per
	Mo DeJong <mdejong@cygnus.com> suggestion.	

	* error.cpp (PrintMISMATCHED_INHERITED_METHODS_IN_BASE): 
	* error.h (class SemanticError): 
	* decl.cpp (CompleteSymbolTable): corrected bug #102 related to 
	not reporting return type conflicts for same signature methods
	inherited from 2 super-interfaces.
	Added new error message MISMATCHED_INHERITED_METHODS_IN_BASE to
	report this situation.

2000-04-07  Vadim Zaliva  <lord@crocodile.org>

	* error.cpp (StaticInitializer): type mismatch corrected. Fix
	suggested by foad@tao-group.com. Bug #156.

	* bytecode.cpp (EmitMethodInvocation): Corrected bug #198.

2000-04-05  Vadim Zaliva  <lord@crocodile.org>

	* expr.cpp (ConstructorAccessCheck): corrected problem with not reporting
	illegal access to protected constructor from other pckage.
	problem reportred by:  Garrick Olson <garrick_olson@hotmail.com>

2000-03-31  Chris Abbey <cabbey@home.net>                                      
                                                                               
       * configure.in: enable --with-icc=PROG, also prevent gcc-isms in        
       the tests when using icc/xlC by setting GXX accordingly.                
                             
2000-04-03  Vadim Zaliva  <lord@crocodile.org>

	* jikes.html: corrected +DR option description (was confused with +M).
	reported by "Hessler, Matthias" <matthias.hessler@factore.net>

2000-04-02  Chris Abbey <cabbey@home.net>

	* config.cpp: 
	* configure.in (EXEEXT): Correcting problem copiling jikes on non x86 
	architecture using --with-icc option.
