@@ -1,5 +1,12 @@
 2000-04-09  Mo DeJong  <mdejong@cygnus.com>
 
+	* src/decl.cpp:
+	* src/modifier.cpp:
+	* src/semantic.h: Renamed Semantic::ProcessAbstractMethodModifiers
+	to Semantic::ProcessInterfaceMethodModifiers.
+
+2000-04-09  Mo DeJong  <mdejong@cygnus.com>
+
 	* src/Makefile.in: Added install-unstripped, install-stripped,
 	and install-docs rules. Made install-unstripped the default.
 	Fixed the install rules to use exec_prefix instead of the prefix.
